--- a/MethodsObjectsSubmissionAssignment/MethodsObjectsSubmissionAssignment/MethodsObjectsSubmissionAssignment.csproj
+++ b/MethodsObjectsSubmissionAssignment/MethodsObjectsSubmissionAssignment/MethodsObjectsSubmissionAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{661E6E0B-1F96-4D5B-8181-25786FFE27E1}</ProjectGuid>
+    <ProjectGuid>{A7C2AF30-77BB-4998-BB15-D15B24BFCCE0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TwentyOne</RootNamespace>
-    <AssemblyName>TwentyOne</AssemblyName>
+    <RootNamespace>MethodsObjectsSubmissionAssignment</RootNamespace>
+    <AssemblyName>MethodsObjectsSubmissionAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
