--- a/ConstructorSubmissionAssignment/ConstructorSubmissionAssignment/ConstructorSubmissionAssignment.csproj
+++ b/ConstructorSubmissionAssignment/ConstructorSubmissionAssignment/ConstructorSubmissionAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{661E6E0B-1F96-4D5B-8181-25786FFE27E1}</ProjectGuid>
+    <ProjectGuid>{BED5BCA1-B15D-4D40-A2F9-B52B6B489DBC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TwentyOne</RootNamespace>
-    <AssemblyName>TwentyOne</AssemblyName>
+    <RootNamespace>ConstructorSubmissionAssignment</RootNamespace>
+    <AssemblyName>ConstructorSubmissionAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Casino">
-      <HintPath>..\Casino\bin\Debug\Casino.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
